--- a/pokemon_app/src/main.scss
+++ b/pokemon_app/src/main.scss
@@ -9,6 +9,21 @@
     margin-top: 30px;
     margin-bottom: 55px;
   }
+  .search-input {
+    text-align: center;
+    padding: 1.5rem;
+    
+    input {
+      padding: 0.5rem;
+      border-radius: 1rem;
+      margin: 1rem;
+    }
+    button {
+      padding: 0.5rem;
+      border-radius: 1rem;
+      background: transparent;
+    }
+  }
   .PokemonIndex {
     .inner {
       display: flex;
